Added resources for web pages label etc

--- a/Klinik.Web/Views/Account/ForgotPassword.cshtml
+++ b/Klinik.Web/Views/Account/ForgotPassword.cshtml
@@ -5,10 +5,9 @@
 <!doctype html>
 <html class="fixed">
 <head>
-
+    <title>@Klinik.Resources.UIMessages.ForgotPasswordTitle</title>
     <!-- Basic -->
     <meta charset="UTF-8">
-
     <meta name="keywords" content="HTML5 Admin Template" />
     <meta name="description" content="Porto Admin - Responsive HTML5 Template">
     <meta name="author" content="okler.net">
@@ -48,11 +47,11 @@
 
             <div class="panel panel-sign">
                 <div class="panel-title-sign mt-xl text-right">
-                    <h2 class="title text-uppercase text-bold m-none"><i class="fa fa-user mr-xs"></i> Recover Password</h2>
+                    <h2 class="title text-uppercase text-bold m-none"><i class="fa fa-user mr-xs"></i> @Klinik.Resources.UIMessages.RecoverPassword</h2>
                 </div>
                 <div class="panel-body">
                     <div class="alert alert-info">
-                        <p class="m-none text-semibold h6">Enter your e-mail below and we will send you reset instructions!</p>
+                        <p class="m-none text-semibold h6">@Klinik.Resources.UIMessages.EnterEmailInstruction</p>
                     </div>
 
                     @using (Html.BeginForm())
@@ -61,12 +60,12 @@
                             <div class="input-group">
                                 @Html.TextBox("EmailID", "", new { @class = "form-control input-lg", @placeholder = "E-mail", @type = "email" })
                                 <span class="input-group-btn">
-                                    <button class="btn btn-primary btn-lg" type="submit">Reset</button>
+                                    <button class="btn btn-primary btn-lg" type="submit">@Klinik.Resources.UIMessages.Reset</button>
                                 </span>
                             </div>
                         </div>
 
-                        <p class="text-center mt-lg">Remembered ? <a href="@Url.Action("Login","Account")">Sign In !</a></p>
+                        <p class="text-center mt-lg">@Klinik.Resources.UIMessages.RememberQuestion <a href="@Url.Action("Login","Account")">@Klinik.Resources.UIMessages.Login</a></p>
                     }
 
                     @if (ViewBag.Message != null)
@@ -79,7 +78,7 @@
                 </div>
             </div>
 
-            <p class="text-center text-muted mt-md mb-md">&copy; Copyright 2019. Medical Management System. All rights reserved.</p>
+            <p class="text-center text-muted mt-md mb-md">&copy; @Klinik.Resources.UIMessages.Copyright</p>
         </div>
     </section>
     <!-- end: page -->
