--- a/Klinik.Web/Views/MappingMaster/UserRoleList.cshtml
+++ b/Klinik.Web/Views/MappingMaster/UserRoleList.cshtml
@@ -14,7 +14,7 @@
     }
 </style>
 
-<button id="btnSave" class="btn btn-primary"><i class="fa fa-save"></i> Simpan </button>
+<button id="btnSave" class="btn btn-primary"><i class="fa fa-save"></i> @Klinik.Resources.UIMessages.Save </button>
 
 <br /><br />
 
@@ -23,11 +23,11 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">Role Assignment</h5>
+        <h5 class="panel-title">@Klinik.Resources.UIMessages.RoleAssignment</h5>
     </header>
     <div class="panel-body">
         <div class="form-group">
-            <label class="col-md-2 control-label" for="inputDefault">User</label>
+            <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.User</label>
             <div class="col-md-4">
                 @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @disabled = "Disabled" })
                 @Html.HiddenFor(x => x.UserID, new { @Id = "hdUserId" })
@@ -39,8 +39,8 @@
                 <thead>
                     <tr>
                         <th><input name="select_all" value="1" type="checkbox"></th>
-                        <th>Id</th>
-                        <th>Role</th>
+                        <th>@Klinik.Resources.UIMessages.ID</th>
+                        <th>@Klinik.Resources.UIMessages.Role</th>
                     </tr>
                 </thead>
             </table>
