--- a/Klinik.Web/Views/MasterData/OrganizationList.cshtml
+++ b/Klinik.Web/Views/MasterData/OrganizationList.cshtml
@@ -8,7 +8,7 @@
 <link href="~/Content/DataTables/css/responsive.bootstrap.css" rel="stylesheet" />
 
 
-<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Data</button>
+<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>@Klinik.Resources.UIMessages.AddNew</button>
 
 <br /><br />
 <section class="panel">
