--- a/Klinik.Web/Views/Account/ResetPassword.cshtml
+++ b/Klinik.Web/Views/Account/ResetPassword.cshtml
@@ -6,7 +6,7 @@
 <!doctype html>
 <html class="fixed">
 <head>
-
+    <title>@Klinik.Resources.UIMessages.ResetPasswordTitle</title>
     <!-- Basic -->
     <meta charset="UTF-8">
 
@@ -49,7 +49,7 @@
 
             <div class="panel panel-sign">
                 <div class="panel-title-sign mt-xl text-right">
-                    <h2 class="title text-uppercase text-bold m-none"><i class="fa fa-user mr-xs"></i> Reset Password</h2>
+                    <h2 class="title text-uppercase text-bold m-none"><i class="fa fa-user mr-xs"></i>@Klinik.Resources.UIMessages.ResetPassword</h2>
                 </div>
                 <div class="panel-body">
                     @using (Html.BeginForm())
@@ -57,7 +57,7 @@
                         @Html.AntiForgeryToken()
                         <div class="form-group mb-lg">
                             <div class="clearfix">
-                                <label class="pull-left">New Password</label>
+                                <label class="pull-left">>@Klinik.Resources.UIMessages.NewPassword</label>
                             </div>
                             <div class="input-group input-group-icon">
                                 @Html.EditorFor(model => model.NewPassword, new { htmlAttributes = new { @class = "form-control input-lg", @type = "password" } })
@@ -71,7 +71,7 @@
 
                         <div class="form-group mb-lg">
                             <div class="clearfix">
-                                <label class="pull-left">Confirm Password</label>
+                                <label class="pull-left">>@Klinik.Resources.UIMessages.ConfirmPassword</label>
                             </div>
                             <div class="input-group input-group-icon">
                                 @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control input-lg", @type = "password" } })
@@ -107,15 +107,15 @@
                             <div class="col-sm-8">
                             </div>
                             <div class="col-sm-4 text-right">
-                                <button type="submit" class="btn btn-primary hidden-xs">Update</button>
-                                <button type="submit" class="btn btn-primary btn-block btn-lg visible-xs mt-lg">Update</button>
+                                <button type="submit" class="btn btn-primary hidden-xs">>@Klinik.Resources.UIMessages.Update</button>
+                                <button type="submit" class="btn btn-primary btn-block btn-lg visible-xs mt-lg">>@Klinik.Resources.UIMessages.Update</button>
                             </div>
                         </div>
                     }
                 </div>
             </div>
 
-            <p class="text-center text-muted mt-md mb-md">&copy; Copyright 2019. Medical Management System. All rights reserved.</p>
+            <p class="text-center text-muted mt-md mb-md">&copy; >@Klinik.Resources.UIMessages.Copyright</p>
         </div>
     </section>
     <!-- end: page -->
