--- a/Klinik.Web/Views/MasterData/CreateOrEditEmployee.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditEmployee.cshtml
@@ -20,7 +20,7 @@
     <div class="panel-body">
         <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditEmployee">
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">Employee Id</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.EmployeeId</label>
                 <div class="col-md-4">
                     @Html.HiddenFor(x => x.Id)
                     @Html.TextBoxFor(x => x.EmpID, new { @class = "form-control", @id = "tbEmplId" })
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">Name</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Name</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.EmpName, new { @class = "form-control", @id = "tbEmplId" })
                     @Html.ValidationMessageFor(m => m.EmpName, "", new { @class = "text-danger" })
@@ -36,23 +36,23 @@
             </div>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
-                    Gender
+                    @Klinik.Resources.UIMessages.Gender
                 </label>
                 <div class="col-md-4">
-                    @Html.RadioButtonFor(m => m.Gender, "M", new { @class = "form-check-input", @id = "rdbMale" }) Male
+                    @Html.RadioButtonFor(m => m.Gender, "M", new { @class = "form-check-input", @id = "rdbMale" }) @Klinik.Resources.UIMessages.Male
                     &nbsp;
-                    @Html.RadioButtonFor(m => m.Gender, "F", new { @class = "form-check-input", @id = "rdbFeMale", @text = "Female" }) Female
+                    @Html.RadioButtonFor(m => m.Gender, "F", new { @class = "form-check-input", @id = "rdbFeMale", @text = "Female" }) @Klinik.Resources.UIMessages.Female
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">Birthdate</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Birthdate</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.Birthdate, new { @class = "form-control", @id = "tbBirthDate" })
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
-                    Employment Type
+                    @Klinik.Resources.UIMessages.EmploymentType
                 </label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(p => p.EmpType, (IEnumerable<SelectListItem>)ViewBag.EmpTypes, new { @class = "form-control", @id = "ddlEmpType" })
@@ -60,28 +60,25 @@
 
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
-                    Department
+                    @Klinik.Resources.UIMessages.Department
                 </label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(p => p.EmpDept, (IEnumerable<SelectListItem>)ViewBag.Departments, new { @class = "form-control", @id = "ddlDept" })
                 </div>
             </div>
-
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">Email</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Email</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.Email, new { @class = "form-control", @id = "tbEmail" })
                     @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <br />
             <footer class="panel-footer">
-                <button type="submit" class="btn btn-primary">Simpan </button>
-                <button type="reset" id="btnreset" class="btn btn-default">Kembali</button>
+                <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
+                <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
             </footer>
         </form>
     </div>
