--- a/Klinik.Web/Views/MasterData/CreateOrEditPrivilege.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditPrivilege.cshtml
@@ -17,7 +17,7 @@
     <div class="panel-body">
         <form class="form-horizontal form-bordered" method="post" action="/MasterData/CreateOrEditPrivilege">
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">Privilege</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Privilege</label>
                 <div class="col-md-4">
                     @Html.HiddenFor(x => x.Id)
                     @Html.TextBoxFor(x => x.Privilige_Name, new { @class = "form-control", @id = "tbPrivilege" })
@@ -25,22 +25,22 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">Description</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Description</label>
                 <div class="col-md-4">
                     @Html.TextAreaFor(x => x.Privilege_Desc, new { @class = "form-control", @id = "tbDesc" })
                     @Html.ValidationMessageFor(m => m.Privilege_Desc, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">Menu</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Menu</label>
                 <div class="col-md-4">
                     @Html.DropDownListFor(x => x.MenuID, (IEnumerable<SelectListItem>)ViewBag.Menu, new { @class = "form-control", @id = "ddlMenu" })
                 </div>
             </div>
             <br />
             <footer class="panel-footer">
-                <button type="submit" class="btn btn-primary">Simpan </button>
-                <button type="reset" id="btnreset" class="btn btn-default">Kembali</button>
+                <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
+                <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
             </footer>
         </form>
     </div>
