--- a/Klinik.Web/Views/PasswordHistory/ChangePassword.cshtml
+++ b/Klinik.Web/Views/PasswordHistory/ChangePassword.cshtml
@@ -16,16 +16,15 @@
         <form class="form-horizontal form-bordered" method="post" action="/PasswordHistory/ChangeUserPassword">
 
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">Organization Code</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.OrganizationCode</label>
                 <div class="col-md-4">
                     @Html.HiddenFor(x => x.OrganizationID)
                     @Html.HiddenFor(x => x.UserID)
                     @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @id = "tbUserName", @readonly = "readonly" })
-
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">Old Password</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.OldPassword</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @id = "tbOldPassword", @type = "password" })
                     @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
@@ -33,7 +32,7 @@
             </div>
 
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">New Password</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.NewPassword</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.NewPassword, new { @class = "form-control", @id = "tbNewPassword", @type = "password" })
                     @Html.ValidationMessageFor(m => m.NewPassword, "", new { @class = "text-danger" })
@@ -41,19 +40,14 @@
             </div>
             <br />
             <footer class="panel-footer">
-                <button type="submit" class="btn btn-primary">Simpan </button>
-                <button type="reset" id="btnreset" style="display:none" class="btn btn-default">Kembali</button>
+                <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save </button>
+                <button type="reset" id="btnreset" style="display:none" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
             </footer>
         </form>
     </div>
 </section>
 <script type="text/javascript">
     $(document).ready(function () {
-
-
-
-    var _status, _message, _temp;
-    var _arrMsg = [];
 
         toastr.options = {
             "closeButton": true,
@@ -65,16 +59,20 @@
             "showMethod": "fadeIn"
         };
 
-    _temp="@ViewBag.Response";
+        var _temp="@ViewBag.Response";
 
-    _arrMsg = _temp.split(";");
+        var _arrMsg = _temp.split(";");
 
-    if (_arrMsg[0] == "SUCCESS") {
-        toastr.success(_arrMsg[1]);
-    }
-    else if (_arrMsg[0] == "ERROR") {
-        toastr.error(_arrMsg[1]);
-    }
+        if (_arrMsg.length > 1) {
+            if (_arrMsg[0] == "True") {
+                toastr.success(_arrMsg[1]);
+            }
+            else {
+                toastr.options.closeButton = true;
+                toastr.options.timeOut = 0;
+                toastr.error(_arrMsg[1]);
+            }
+        }
     });
 
 </script>
