--- a/Klinik.Web/Views/Shared/Lockout.cshtml
+++ b/Klinik.Web/Views/Shared/Lockout.cshtml
@@ -5,6 +5,6 @@
 }
 
 <hgroup>
-    <h1 class="text-danger">Locked out.</h1>
-    <h2 class="text-danger">This account has been locked out, please try again later.</h2>
+    <h1 class="text-danger">@Klinik.Resources.UIMessages.LockedOut</h1>
+    <h2 class="text-danger">@Klinik.Resources.UIMessages.ThisAccountLocked</h2>
 </hgroup>
