--- a/Klinik.Web/Views/Unauthorized/Index.cshtml
+++ b/Klinik.Web/Views/Unauthorized/Index.cshtml
@@ -4,5 +4,5 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Unauthorized Access..!</h2>
+<h2>@Klinik.Resources.UIMessages.UnauthorizedAccess</h2>
 
