--- a/Klinik.Web/Views/MasterData/EmployeeList.cshtml
+++ b/Klinik.Web/Views/MasterData/EmployeeList.cshtml
@@ -8,8 +8,7 @@
 <link href="~/Content/DataTables/css/dataTables.bootstrap.css" rel="stylesheet" />
 <link href="~/Content/DataTables/css/responsive.bootstrap.css" rel="stylesheet" />
 
-
-<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>@Klinik.Resources.UIMessages.AddNew</button>
+<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
 
 <br /><br />
 <section class="panel">
@@ -17,21 +16,21 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">List Employee</h5>
+        <h5 class="panel-title">@Klinik.Resources.UIMessages.EmployeeList</h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
             <table id="tbEmployee" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>Id</th>
-                        <th>Empl ID</th>
-                        <th>name</th>
-                        <th>BirthDate</th>
-                        <th>Gender</th>
-                        <th>Empl Type</th>
-                        <th>Department</th>
-                        <th>Email</th>
+                        <th>@Klinik.Resources.UIMessages.ID</th>
+                        <th>@Klinik.Resources.UIMessages.EmpID</th>
+                        <th>@Klinik.Resources.UIMessages.Name</th>
+                        <th>@Klinik.Resources.UIMessages.Birthdate</th>
+                        <th>@Klinik.Resources.UIMessages.Gender</th>
+                        <th>@Klinik.Resources.UIMessages.EmpType</th>
+                        <th>@Klinik.Resources.UIMessages.Department</th>
+                        <th>@Klinik.Resources.UIMessages.Email</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -118,9 +117,8 @@
                 { "data": "EmpDeptDesc", "name": "EmpDeptDesc", "autoWidth": true },
                 { "data": "Email", "name": "Email", "autoWidth": true },
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditEmployee?id=' + full.Id + '">Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >Delete</button>"; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditEmployee?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>"; }
                 }
-
 
             ]
         });
@@ -137,10 +135,8 @@
         "showMethod": "fadeIn"
     };
 
-
     var Delete = function (ID) {
-        var txt;
-        var r = confirm("Apakah anda yakin akan menghapus Employee dengan Id " + ID);
+        var r = confirm("@Klinik.Resources.UIMessages.DeleteConfirmation" + ID + " ) ?");
         if (r == true) {
             DeleteUser(ID);
         }
@@ -152,8 +148,9 @@
             url: '/MasterData/DeleteMasterEmployee?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status == "SUCCESS") {
-
+                if (result.Status == "True") {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
                     location.reload();
                     toastr.success(result.Message);
                 }
