--- a/Klinik.Web/Views/MasterData/OrganizationList.cshtml
+++ b/Klinik.Web/Views/MasterData/OrganizationList.cshtml
@@ -7,8 +7,7 @@
 <link href="~/Content/DataTables/css/dataTables.bootstrap.css" rel="stylesheet" />
 <link href="~/Content/DataTables/css/responsive.bootstrap.css" rel="stylesheet" />
 
-
-<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>@Klinik.Resources.UIMessages.AddNew</button>
+<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
 
 <br /><br />
 <section class="panel">
@@ -16,17 +15,17 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">List Organisasi</h5>
+        <h5 class="panel-title">>@Klinik.Resources.UIMessages.OrganizationList</h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
             <table id="tbOrganization" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>Id</th>
-                        <th>Organization Code</th>
-                        <th>Organization Name</th>
-                        <th>Klinik</th>
+                        <th>>@Klinik.Resources.UIMessages.ID</th>
+                        <th>>@Klinik.Resources.UIMessages.OrganizationCode</th>
+                        <th>>@Klinik.Resources.UIMessages.OrganizationName</th>
+                        <th>>@Klinik.Resources.UIMessages.Clinic</th>
                         <th></th>
 
                     </tr>
@@ -91,7 +90,7 @@
                 { "data": "Klinik", "name": "Klinik", "autoWidth": true },
 
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditOrganization?id=' + full.Id + '">Edit</a>' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >Delete</button>" + ' | <a class="btn btn-info" href="/MappingMaster/OrgPrivilegeList?orgid=' + full.Id + '">Set Privilege</a>'; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditOrganization?id=' + full.Id + '">>@Klinik.Resources.UIMessages.Edit</a>' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >>@Klinik.Resources.UIMessages.Delete</button>" + ' | <a class="btn btn-info" href="/MappingMaster/OrgPrivilegeList?orgid=' + full.Id + '">>@Klinik.Resources.UIMessages.SetPrivilege</a>'; }
                 }
 
 
@@ -112,8 +111,7 @@
 
 
     var Delete = function (ID) {
-        var txt;
-        var r = confirm("Apakah anda yakin akan menghapus Organisasi dengan Id " + ID);
+        var r = confirm("@Klinik.Resources.UIMessages.DeleteConfirmation" + ID + " ) ?");
         if (r == true) {
             DeleteOrganization(ID);
         }
@@ -125,8 +123,9 @@
             url: '/MasterData/DeleteMasterOrganisasi?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status == "SUCCESS") {
-
+                if (result.Status == "True") {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
                     location.reload();
                     toastr.success(result.Message);
                 }
