--- a/Klinik.Web/Views/MasterData/PrivilegeList.cshtml
+++ b/Klinik.Web/Views/MasterData/PrivilegeList.cshtml
@@ -8,7 +8,7 @@
 <link href="~/Content/DataTables/css/dataTables.bootstrap.css" rel="stylesheet" />
 <link href="~/Content/DataTables/css/responsive.bootstrap.css" rel="stylesheet" />
 
-<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>@Klinik.Resources.UIMessages.AddNew</button>
+<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
 
 <br /><br />
 <section class="panel">
@@ -16,17 +16,17 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">List Privilege</h5>
+        <h5 class="panel-title">@Klinik.Resources.UIMessages.PrivilegeList</h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
             <table id="tbPrivilege" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>Id</th>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Navigation</th>
+                        <th>@Klinik.Resources.UIMessages.ID</th>
+                        <th>@Klinik.Resources.UIMessages.Name</th>
+                        <th>@Klinik.Resources.UIMessages.Description</th>
+                        <th>@Klinik.Resources.UIMessages.Navigation</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -89,7 +89,7 @@
                 { "data": "Privilege_Desc", "name": "Privilege_Desc", "autoWidth": true },
                 { "data": "MenuDesc", "name": "MenuDesc", "autoWidth": true },
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditPrivilege?id=' + full.Id + '">Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >Delete</button>"; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditPrivilege?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>"; }
                 }
             ]
         });
@@ -106,10 +106,8 @@
         "showMethod": "fadeIn"
     };
 
-
     var Delete = function (ID) {
-        var txt;
-        var r = confirm("Apakah anda yakin akan menghapus Privilege dengan code " + ID);
+        var r = confirm("@Klinik.Resources.UIMessages.DeleteConfirmation" + ID + " ) ?");
         if (r == true) {
             DeletePrivilege(ID);
         }
@@ -121,8 +119,9 @@
             url: '/MasterData/DeleteMasterPrivilege?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status == "SUCCESS") {
-
+                if (result.Status == "True") {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
                     location.reload();
                     toastr.success(result.Message);
                 }
