--- a/Klinik.Web/Views/MasterData/RoleList.cshtml
+++ b/Klinik.Web/Views/MasterData/RoleList.cshtml
@@ -8,7 +8,7 @@
 <link href="~/Content/DataTables/css/dataTables.bootstrap.css" rel="stylesheet" />
 <link href="~/Content/DataTables/css/responsive.bootstrap.css" rel="stylesheet" />
 
-<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>@Klinik.Resources.UIMessages.AddNew</button>
+<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
 
 <br /><br />
 <section class="panel">
@@ -16,18 +16,17 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">List Role</h5>
+        <h5 class="panel-title">@Klinik.Resources.UIMessages.RoleList</h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
             <table id="tbRole" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>Id</th>
-                        <th>Organization</th>
-                        <th>Role</th>
+                        <th>@Klinik.Resources.UIMessages.ID</th>
+                        <th>@Klinik.Resources.UIMessages.Organization</th>
+                        <th>@Klinik.Resources.UIMessages.Role</th>
                         <th></th>
-
                     </tr>
                 </thead>
             </table>
@@ -83,9 +82,8 @@
                 { "data": "OrganizationName", "name": "OrganizationName", "autoWidth": true },
                 { "data": "RoleName", "name": "RoleName", "autoWidth": true },
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditRole?id=' + full.Id + '">Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >Delete</button>" + ' | <a class="btn btn-info" href="/MappingMaster/RolePrivilegeList?roleid=' + full.Id + '">Set Role Privilege</a>'; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditRole?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + ' | <a class="btn btn-info" href="/MappingMaster/RolePrivilegeList?roleid=' + full.Id + '">@Klinik.Resources.UIMessages.SetRolePrivilege</a>'; }
                 }
-
 
             ]
         });
@@ -102,10 +100,8 @@
         "showMethod": "fadeIn"
     };
 
-
     var Delete = function (ID) {
-        var txt;
-        var r = confirm("Apakah anda yakin akan menghapus Organisasi dengan Id " + ID);
+        var r = confirm("@Klinik.Resources.UIMessages.DeleteConfirmation" + ID + " ) ?");
         if (r == true) {
             DeleteRole(ID);
         }
@@ -117,8 +113,9 @@
             url: '/MasterData/DeleteMasterRole?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status == "SUCCESS") {
-
+                if (result.Status == "True") {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
                     location.reload();
                     toastr.success(result.Message);
                 }
