--- a/Klinik.Web/Views/MasterData/UserList.cshtml
+++ b/Klinik.Web/Views/MasterData/UserList.cshtml
@@ -8,8 +8,7 @@
 <link href="~/Content/DataTables/css/dataTables.bootstrap.css" rel="stylesheet" />
 <link href="~/Content/DataTables/css/responsive.bootstrap.css" rel="stylesheet" />
 
-
-<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>@Klinik.Resources.UIMessages.AddNew</button>
+<button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
 
 <br /><br />
 <section class="panel">
@@ -17,21 +16,20 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">List User</h5>
+        <h5 class="panel-title">@Klinik.Resources.UIMessages.UserList</h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
             <table id="tbUser" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>Id</th>
-                        <th>Organization</th>
-                        <th>UserName</th>
-                        <th>Employee</th>
-                        <th>Expired date</th>
-                        <th>Status</th>
+                        <th>@Klinik.Resources.UIMessages.ID</th>
+                        <th>@Klinik.Resources.UIMessages.Organization</th>
+                        <th>@Klinik.Resources.UIMessages.Username</th>
+                        <th>@Klinik.Resources.UIMessages.Employee</th>
+                        <th>@Klinik.Resources.UIMessages.ExpiredDate</th>
+                        <th>@Klinik.Resources.UIMessages.Status</th>
                         <th></th>
-
                     </tr>
                 </thead>
             </table>
@@ -105,10 +103,8 @@
                 { "data": "ExpiredDateStr", "name": "ExpiredDateStr", "autoWidth": true },
                 { "data": "StatusDesc", "name": "StatusDesc", "autoWidth": true },
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditUser?id=' + full.Id + '">Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >Delete</button>" + ' | <a class="btn btn-info" href="/MappingMaster/UserRoleList?userid=' + full.Id + '">Assign Role</a>'; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditUser?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + ' | <a class="btn btn-info" href="/MappingMaster/UserRoleList?userid=' + full.Id + '">@Klinik.Resources.UIMessages.AssignRole</a>'; }
                 }
-
-
             ]
         });
     });
@@ -124,10 +120,8 @@
         "showMethod": "fadeIn"
     };
 
-
     var Delete = function (ID) {
-        var txt;
-        var r = confirm("Apakah anda yakin akan menghapus User dengan Id " + ID);
+        var r = confirm("@Klinik.Resources.UIMessages.DeleteConfirmation" + ID + " ) ?");
         if (r == true) {
             DeleteUser(ID);
         }
@@ -139,8 +133,9 @@
             url: '/MasterData/DeleteMasterUser?id=' + Id,
             type: 'POST',
             success: function (result) {
-                if (result.Status == "SUCCESS") {
-
+                if (result.Status == "True") {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
                     location.reload();
                     toastr.success(result.Message);
                 }
