Removed unused bracket sign

--- a/Klinik.Web/Views/MasterData/OrganizationList.cshtml
+++ b/Klinik.Web/Views/MasterData/OrganizationList.cshtml
@@ -15,7 +15,7 @@
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">>@Klinik.Resources.UIMessages.OrganizationList</h5>
+        <h5 class="panel-title">@Klinik.Resources.UIMessages.OrganizationList</h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
